Fix vertical spacing in list mixins (#324)
* Fix vertical spacing in list mixins

* Remove unnecessary padding on list items

* Fix Drupal’s toolbar menu styles

--- a/source/_patterns/00-config/01-mixins/_mixins.list.scss
+++ b/source/_patterns/00-config/01-mixins/_mixins.list.scss
@@ -8,6 +8,7 @@
   padding: 0;
 
   li {
+    @include vertical-spacing(0);
     padding-left: 0;
 
     &::before {
@@ -22,6 +23,7 @@
   padding-left: 0;
 
   li {
+    @include vertical-spacing(0);
     padding-left: 0;
   }
 
