--- a/source/_patterns/04-components/00-cms-styles/toolbar-menu/_toolbar-menu.scss
+++ b/source/_patterns/04-components/00-cms-styles/toolbar-menu/_toolbar-menu.scss
@@ -3,10 +3,5 @@
 
 /* stylelint-disable-next-line selector-no-qualifying-type */
 ul.toolbar-menu {
-  font-size: 1em;
-
-  li {
-    margin-bottom: 0;
-    padding-left: 0;
-  }
+  @include list-clean;
 }
